# Adm

./: .env  .env.example  12  EMAIL_PRODUCTION_READY.md  EMAIL_SETUP_GUIDE.md  FINANCIAL_DATA_IMPLEMENTATION_COMPLETE.md  FINANCIAL_DATA_MANAGEMENT.md  IMPORT_EXPORT_COMPLETE.md  Ideias.txt  Procfile  README.md  db.sqlite3  deploy.sh  deploy_email.sh  deploy_test.sh  financial_data_manager.sh  gunicorn.conf.py  main.py  manage.py  pyproject.toml  railway.json  requirements.txt  sample_financial_data.json
.github/workflows/: deploy.yml
Adm/: asgi.py  settings.py  urls.py  wsgi.py
agentAi/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
agentAi/migrations/: 0001_initial.py  0002_remove_conversation_agent_config_and_more.py  0003_initial.py
authentication/: admin.py  models.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_bio_user_birth_date_user_phone_and_more.py  0003_remove_user_bio_remove_user_birth_date_and_more.py  0004_user_has_ai.py  0005_rename_has_ai_user_is_premium.py
finance_manager/: admin.py  models.py  urls.py  utils.py  views.py
finance_manager/migrations/: 0001_initial.py  0002_expensecategory_description.py  0003_alter_expenses_spent_at.py  0004_expensecategory_color.py  0005_incomecategorys_incomes.py  0006_rename_spent_at_incomes_received_at_and_more.py  0007_add_user_to_categories.py
finance_statistics/: apps.py  calendar_generator.py  graph_generator.py  urls.py  utils.py  views.py
landingpage/: urls.py  views.py
static/css/: gemini-chat.css  sidebar-mobile.css  statistics-mobile.css
static/js/: finance_dashboard.js  finance_statistics.js  gemini-chat.js  mobile-navigation.js  sidebar-navigation.js  toast_message.js  transaction-filters.js
staticfiles/css/: finance_dashboard.css  toast_message.css  transaction-filters.css
staticfiles/js/: chart_modal.js  finance_dashboard.js  finance_statistics.js  gemini-chat.js  toast_message.js  transaction-filters.js
templates/: base.html
templates/agentAi/: index.html
templates/authentication/: change_password.html  edit_profile.html  login.html  password_reset_complete.html  (+5 more)
(+15 files in other folders)
