[project]
name = "ADM"
version = "2.0.0"
description = "An Web-Site to administrate your life"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "asgiref==3.8.1",
    "beautifulsoup4==4.13.4",
    "cachetools==5.5.2",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.2",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "dj-database-url==3.0.1",
    "django==5.2.3",
    "django-colorfield==0.14.0",
    "django-mathfilters==1.0.0",
    "fonttools==4.59.0",
    "google==3.0.0",
    "google-auth==2.40.3",
    "google-genai==1.29.0",
    "gunicorn==23.0.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.5",
    "numpy==2.3.2",
    "packaging==25.0",
    "pandas==2.3.1",
    "pillow==11.3.0",
    "psycopg2-binary==2.9.10",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2025.2",
    "requests==2.32.4",
    "rsa==4.9.1",
    "seaborn==0.13.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlparse==0.5.3",
    "tenacity==9.1.2",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "websockets==15.0.1",
    "whitenoise==6.9.0",
]
